objects/SVMXC__Service_Order_Line__c.object
<CustomObject>
    <fields>
        <fullName>SMAX_PS_Work_Order_Status__c</fullName>
        <description>Denotes the work order header order status. This is used in the fault code debrief validation rule.</description>
        <inlineHelpText>Denotes the work order header order status. This is used in the fault code debrief validation rule.</inlineHelpText>
        <label>Billing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_is_Serialized__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that a product is serialized</description>
        <inlineHelpText>Denotes that a product is Serialized</inlineHelpText>
        <label>is Serialized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Action_Performed__c</fullName>
        <description>Used for Parts Swap</description>
        <label>Action Performed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Repaired</fullName>
                </value>
                <value>
                    <fullName>Replaced</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
                <value>
                    <fullName>New Configuration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_PS_As_Found_Status__c</fullName>
        <description>Denotes the as found status for the installed product</description>
        <inlineHelpText>Denotes the as found status for the installed product</inlineHelpText>
        <label>As-Found Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                </value>
                <value>
                    <fullName>Environmental Condition</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Outside Intended Spec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_PS_DOA_Installed_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that the Installed Product is Dead On Arrival</description>
        <inlineHelpText>Denotes that the Installed Product is Dead On Arrival</inlineHelpText>
        <label>Installed Product is DOA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SVMX_PS_Labor_For2__c</fullName>
        <formula>SVMXC__Service_Order__r.OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Labor For2</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Miles_Driven__c</fullName>
        <label>Miles Driven</label>
        <precision>5</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_VS_Consumed_Part_Code__c</fullName>
        <description>The field indicates the Serial Number in Text form. This will be used to find the proper Stock Serial under the consumed product stock. Either this field or &quot;Consumed Stock Serial&quot; need to be populated in case if product is Serialized in order to get proper data.</description>
        <inlineHelpText>The field indicates the Serial Number in Text form. This will be used to find the proper Stock Serial under the consumed product stock. Either this field or &quot;Consumed Stock Serial&quot; need to be populated in case if product is Serialized in order to get prop</inlineHelpText>
        <label>Consumed Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_VS_Consumed_Product_Stock__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field indicates the product stock consumed. It is necessary to provide a reference of Stock Serial or a Serial number in case the product is Serialized for proper consumption</description>
        <inlineHelpText>This field indicates the product stock consumed. It is necessary to provide a reference of Stock Serial or a Serial number in case the product is Serialized for proper consumption</inlineHelpText>
        <label>Consumed Product Stock</label>
        <referenceTo>SVMXC__Product_Stock__c</referenceTo>
        <relationshipLabel>Work Details (Consumed Product Stock)</relationshipLabel>
        <relationshipName>SVMX_PS_VS_Consumed_Product_Stock</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_VS_Consumed_Status__c</fullName>
        <description>The status of the Part In process</description>
        <inlineHelpText>The status of the Part In process</inlineHelpText>
        <label>Consumed Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_VS_Consumed_Stocked_Serial__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The field indicates reference to Stock Serial. This will be used to find the proper Stock Serial under the consumed product stock. Either this field or &quot;Consumed Serial Number&quot; need to be populated in case if product is Serialized in order to get data.</description>
        <inlineHelpText>The field indicates reference to Stock Serial. This will be used to find the proper Stock Serial under the consumed product stock. Either this field or &quot;Consumed Serial Number&quot; need to be populated in case if product is Serialized in order to get data.</inlineHelpText>
        <label>Consumed Stock Serial</label>
        <referenceTo>SVMXC__Product_Serial__c</referenceTo>
        <relationshipLabel>Work Details (Consumed Stock Serial)</relationshipLabel>
        <relationshipName>SVMX_PS_VS_Consumed_Stocked_Serial</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_VS_Is_Create_Install_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate if creation of Installed Product needs to be done or not</description>
        <inlineHelpText>Flag to indicate if creation of Installed Product needs to be done or not</inlineHelpText>
        <label>Is Create Install Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_VS_Is_Part_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field indicates that there is a part out and van stock code needs to process part out process</description>
        <inlineHelpText>This field indicates that there is a part out and van stock code needs to process part out process</inlineHelpText>
        <label>Is Part Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_VS_Part_Out_Status__c</fullName>
        <description>The status of the Part out process</description>
        <inlineHelpText>The status of the Part out process</inlineHelpText>
        <label>Part Out Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_VS_Product_Tracking__c</fullName>
        <description>This field helps to determine the Product Tracking (If Serialized/Non-Serialized)</description>
        <inlineHelpText>This field helps to determine the Product Tracking (If Serialized/Non-Serialized)</inlineHelpText>
        <label>Product Tracking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_VS_Return_Installed_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Installed Product which is removed as a part of Part Out Process</description>
        <inlineHelpText>Installed Product which is removed as a part of Part Out Process</inlineHelpText>
        <label>Return Installed Product</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Work Details (Return Installed Product)</relationshipLabel>
        <relationshipName>SVMX_PS_VS_Return_Installed_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_VS_Return_Part_Product_Tracking__c</fullName>
        <description>This field helps to determine the Product Tracking (If Serialized/Non-Serialized) for Returned Part</description>
        <inlineHelpText>This field helps to determine the Product Tracking (If Serialized/Non-Serialized) for Returned Part</inlineHelpText>
        <label>Return Part Product Tracking</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_VS_Return_Part__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Reference of Product which is removed as a part of Part Out Process. If Serialized, provide &quot;Return Serial Number&quot;. This will be used in Part Out Process to locate the Installed Product to be removed. Populate &quot;Return Installed Product&quot; or this field.</description>
        <inlineHelpText>Reference of Product which is removed as a part of Part Out Process. If Serialized, provide &quot;Return Serial Number&quot;. This will be used in Part Out Process to locate the Installed Product to be removed. Populate &quot;Return Installed Product&quot; or this field.</inlineHelpText>
        <label>Return Part</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Work Details (Return Part)</relationshipLabel>
        <relationshipName>SVMX_PS_VS_Return_Part</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_VS_Return_Serial_Number__c</fullName>
        <description>This field needs to be populated in case if the &quot;Return Part&quot; is &quot;Serialized&quot;. Using info from &quot;Return Part&quot; and this Serial Number, Installed Product will be found which will be then used for Part Out Process</description>
        <inlineHelpText>This field needs to be populated in case if the &quot;Return Part&quot; is &quot;Serialized&quot;. Using info from &quot;Return Part&quot; and this Serial Number, Installed Product will be found which will be then used for Part Out Process</inlineHelpText>
        <label>Return Serial Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_VS_Returned_Qty__c</fullName>
        <description>This field indicates the qty of Non-Serialized Products returned while Part Out Process. This field is necessary to populated in case the product is Non-Serialized</description>
        <inlineHelpText>This field indicates the qty of Non-Serialized Products returned while Part Out Process. This field is necessary to populated in case the product is Non-Serialized</inlineHelpText>
        <label>Returned Qty</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMX_PS_Work_Time_in_Minutes__c</fullName>
        <description>This is used in support of MTTR reporting.  Do Not place on page layout or in any SFMs.</description>
        <formula>(((SVMXC__End_Date_and_Time__c - SVMXC__Start_Date_and_Time__c )*24)*60)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Work Time in Minutes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <recordTypes>
        <fullName>SMAX_PS_Remote_Support</fullName>
        <active>true</active>
        <description>Remote Support Record Type used for easily Debriefing Remote Work Orders</description>
        <label>Remote Support</label>
    </recordTypes>
    <recordTypes>
        <fullName>SMAX_PS_Tools</fullName>
        <active>true</active>
        <description>Used for tracking tools used during service delivery.</description>
        <label>Tools</label>
    </recordTypes>
</CustomObject>